--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -30,7 +30,7 @@
         </div>
         <div class="control-group volume">
             <span class="ion-volume-high icon"></span>
-            <seek-bar value="{{ playerBar.SongPlayer.currentVolume }}" max="{{ playerBar.SongPlayer.maxVolume }}" on-change="playerBar.songPlayer.setCurrentVolume(value)"></seek-bar>
+            <seek-bar value="{{ playerBar.songPlayer.currentVolume }}" max="{{ playerBar.songPlayer.maxVolume }}" on-change="playerBar.songPlayer.setCurrentVolume(value)"></seek-bar>
         </div>
     </div>
 </section>
