--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -22,8 +22,8 @@
             <h2 class="song-name">{{ playerBar.songPlayer.currentSong.title }}</h2>
             <div class="seek-control">
                 <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-                <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div>
-                <div class="total-time">{{ playerBar.songPlayer.currentSong.duration }}</div>
+                <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
+                <div class="total-time">{{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
             </div>
             <h2 class="artist-song-mobile"></h2>
             <h3 class="artist-name">{{ album.albumData.artist }}</h3>
