--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -29,7 +29,12 @@
             <h3 class="artist-name">{{ album.albumData.artist }}</h3>
         </div>
         <div class="control-group volume">
-            <span class="ion-volume-high icon"></span>
+            <span class="ion-volume-high icon"
+                  ng-show="playerBar.songPlayer.currentVolume"
+                  ng-click="playerBar.songPlayer.volumeMute()"></span>
+            <span class="ion-volume-mute icon"
+                  ng-show="!playerBar.songPlayer.currentVolume"
+                  ng-click="playerBar.songPlayer.volumeRestore()"></span>
             <seek-bar value="{{ playerBar.songPlayer.currentVolume }}" max="{{ playerBar.songPlayer.maxVolume }}" on-change="playerBar.songPlayer.setCurrentVolume(value)"></seek-bar>
         </div>
     </div>
