--- a/app/styles/album.css
+++ b/app/styles/album.css
@@ -74,6 +74,10 @@ body.album {
     width: 10%;
 }
 
+.playlist-load {
+    width: 2%;
+}
+
 .song-item-duration {
     width: 5%;
 }
@@ -108,6 +112,12 @@ body.album {
 
 .album-song-button .fa-play {
     padding-left: 5px;
+}
+
+.playlist-name {
+
+    background-color: rgba(101,18,95,0.5);
+
 }
 
 @media (max-width: 40rem) and (min-width: 20rem) {
